# python-skel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Argcfile  Dockerfile  README.md  justfile  pyproject.toml
scripts/: check-deps.sh
src/app/: main.py
tests/app/: test_main.py
