[project]
name = "skel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.4",
]

# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["app*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.17.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.7",
]
